# OTUS_MLA

./: .gitignore  README.md
HW_02/try_docker/: Dockerfile  logreg_pipe.pkl  main.py  pyproject.toml  requirements.txt  test_request.http
HW_02/try_docker/make_model/: make_model.ipynb  prep_transformer.py  test_model.ipynb
HW_03/02_finance/: cluster_helper.py  get_cryptodata.ipynb  pyproject.toml
HW_03/02_finance/data/: alts_list.pkl  df30d_crypto.csv  df3d_crypto.csv  df60min_crypto.csv  df_crypto.csv  small_list.pkl
