[tool.poetry]
name = "try_docker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pydantic = "^1.10.2"
fastapi = "^0.82.0"
numpy = "^1.23.2"
jupyterlab = "^3.4.6"
pandas = "^1.4.4"
setuptools = "^65.3.0"
scipy = "^1.9.1"
scikit-learn = "^1.1.2"
joblib = "^1.1.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
